crude transaction test
